fixing design comment

--- a/la rutas.html
+++ b/la rutas.html
@@ -13,12 +13,8 @@
 
   <body>
     <div class="main-wrapper">
-      <header id="main-header">
-        <nav
-          class="navbar navbar-expand-lg"
-          data-aos="fade"
-          data-aos-delay="300"
-        >
+      <header id="main-header" data-aos="fade" data-aos-delay="300">
+        <nav class="navbar navbar-expand-lg">
           <ul class="social-menu d-flex list-unstyled my-0">
             <li>
               <a href="#">
