finish revision comments

--- a/la matcha.html
+++ b/la matcha.html
@@ -114,7 +114,11 @@
         <section class="main-projects">
           <section class="col-imgs-grid">
             <div class="grid-col">
-              <a data-img="assets/images/la-matcha-p1.png" data-caption="© Adolfo Maidán / France Press" class="openImgModal">
+              <a
+                data-img="assets/images/la-matcha-p1.png"
+                data-caption="© Adolfo Maidán / France Press"
+                class="openImgModal"
+              >
                 <img
                   src="assets/images/la-matcha-p1.png"
                   data-src="assets/images/la-matcha-p1.png"
@@ -123,7 +127,11 @@
               /></a>
             </div>
             <div class="grid-col">
-              <a data-img="assets/images/la-matcha-p2.png" data-caption="© Adolfo Maidán / France Press" class="openImgModal">
+              <a
+                data-img="assets/images/la-matcha-p2.png"
+                data-caption="© Adolfo Maidán / France Press"
+                class="openImgModal"
+              >
                 <img
                   src="assets/images/la-matcha-p2.png"
                   data-src="assets/images/la-matcha-p2.png"
@@ -132,7 +140,11 @@
               /></a>
             </div>
             <div class="grid-col">
-              <a data-img="assets/images/la-matcha-p3.png" data-caption="© Adolfo Maidán / France Press" class="openImgModal">
+              <a
+                data-img="assets/images/la-matcha-p3.png"
+                data-caption="© Adolfo Maidán / France Press"
+                class="openImgModal"
+              >
                 <img
                   src="assets/images/la-matcha-p3.png"
                   data-src="assets/images/la-matcha-p3.png"
@@ -141,7 +153,11 @@
               /></a>
             </div>
             <div class="grid-col">
-              <a data-img="assets/images/la-matcha-p4.png" data-caption="© Adolfo Maidán / France Press" class="openImgModal">
+              <a
+                data-img="assets/images/la-matcha-p4.png"
+                data-caption="© Adolfo Maidán / France Press"
+                class="openImgModal"
+              >
                 <img
                   src="assets/images/la-matcha-p4.png"
                   data-src="assets/images/la-matcha-p4.png"
@@ -150,7 +166,11 @@
               /></a>
             </div>
             <div class="grid-col">
-              <a data-img="assets/images/la-matcha-p1.png" data-caption="© Adolfo Maidán / France Press" class="openImgModal">
+              <a
+                data-img="assets/images/la-matcha-p1.png"
+                data-caption="© Adolfo Maidán / France Press"
+                class="openImgModal"
+              >
                 <img
                   src="assets/images/la-matcha-p1.png"
                   data-src="assets/images/la-matcha-p1.png"
@@ -159,17 +179,26 @@
               /></a>
             </div>
             <div class="grid-col">
-              <a data-img="assets/images/la-matcha-p5.png" data-caption="© Adolfo Maidán / France Press" class="openImgModal">
+              <a
+                data-img="assets/images/la-matcha-p5.png"
+                data-caption="© Adolfo Maidán / France Press"
+                class="openImgModal"
+              >
                 <img
                   src="assets/images/la-matcha-p5.png"
                   data-src="assets/images/la-matcha-p5.png"
                   class="lazyload"
                   alt="la matcha img"
-              /></a>
+                />
+              </a>
             </div>
           </section>
           <section class="col-menu">
-            <a href="https://maps.google.com" class="project-map">
+            <a
+              href="https://maps.google.com"
+              target="_blank"
+              class="project-map"
+            >
               <img
                 src="assets/images/la-matcha-map.png"
                 data-src="assets/images/la-matcha-map.png"
@@ -420,7 +449,7 @@
                 </div>
               </div>
               <div class="arrow-fixed">
-                <a href="la rutas.html" class="next pb-2">
+                <a href="la rutas.html" class="next mb-4">
                   <img
                     src="assets/images/arrow-white.png"
                     data-src="assets/images/arrow-white.png"
@@ -428,7 +457,7 @@
                     alt="arrow-white"
                   />
                 </a>
-                <a href="la rutas.html" class="prev pt-3">
+                <a href="la rutas.html" class="prev mt-4">
                   <img
                     src="assets/images/arrow-white.png"
                     data-src="assets/images/arrow-white.png"
@@ -439,6 +468,39 @@
               </div>
             </div>
           </section>
+          <div class="call-to-actions-items text-center">
+            <div 
+              class="cta-1 d-block"
+              data-aos="fade"
+              data-aos-delay="800"
+            >
+              <span>UBEDA en DICIEMBRE</span>
+              <span>Últimas plazas disponibles</span>
+          </div>
+            <div 
+              class="cta-2 d-none"
+              data-aos="fade"
+              data-aos-delay="800"
+            >
+              <span>Sur de Gredos</span>
+              <span>Nuevas fechas</span>
+            </div>
+            <div 
+              class="cta-logo d-block"
+              data-aos="fade"
+              data-aos-delay="800"
+            >
+              <img src="assets/images/brand-logo.png" data-src="assets/images/brand-logo.png" class="lazyload" alt="">
+            </div>
+            <div 
+              class="cta-3 d-none"
+              data-aos="fade"
+              data-aos-delay="800"
+            >
+              <span>Este es otro</span>
+              <span>CALL to ACTION</span>
+            </div>
+          </div>
         </section>
       </main>
     </div>
@@ -459,11 +521,7 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.5.0.min.js"
-      integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
-      crossorigin="anonymous"
-    ></script>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="assets/js/aos.js"></script>
