fixing revision 2 design comment

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="call-to-actions-items text-center">
               <a
                 href="#"
-                class="item-1 d-block"
+                class="cta-1 d-block"
                 data-aos="fade"
                 data-aos-delay="800"
               >
@@ -144,7 +144,7 @@
               </a>
               <a
                 href="#"
-                class="item-2 d-block"
+                class="cta-2 d-block"
                 data-aos="fade"
                 data-aos-delay="800"
               >
@@ -153,7 +153,7 @@
               </a>
               <a
                 href="#"
-                class="item-3 d-block"
+                class="cta-3 d-block"
                 data-aos="fade"
                 data-aos-delay="800"
               >
@@ -171,20 +171,16 @@
             </div>
           </div>
         </section>
-        <section id="main-hola" class="d-none">
+        <section id="main-hola" >
           <img
             src="assets/images/hola-img.png"
             data-src="assets/images/hola-img.png"
             class="lazyload"
             alt="Hola image"
-            data-aos="fade-right"
-            data-aos-delay="400"
-            data-aos-offset="500"
-            data-aos-duration="800"
           />
 
           <div class="section-overlay">
-            <div class="text-overlay" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800" data-aos-offset="500">
+            <div class="text-overlay">
               <div class="img-wrap">
                 <img
                   src="assets/images/black-leaf.png"
@@ -195,11 +191,11 @@
               <p>
                 Te abrimos la puerta a una España desconocida, llena de paisajes
                 increíbles, joyas culturales y donde hay gente que continúa
-                trabajando de formas hoy casi olvidadas, y recuperando
+                trabajando de formas hoy casi olvidadas,  y recuperando
                 actividades de forma sostenible.
               </p>
             </div>
-            <div class="arrow-fixed" data-aos="fade" data-aos-delay="500">
+            <div class="arrow-fixed">
               <a href="la rutas.html">
                 <img
                   src="assets/images/arrow-white.png"
@@ -215,9 +211,7 @@
     </div>
 
     <script
-      src="https://code.jquery.com/jquery-3.5.0.min.js"
-      integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
-      crossorigin="anonymous"
+      src="assets/js/jquery.min.js" 
     ></script>
     <script src="assets/js/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.2.0/lazysizes.min.js"></script>
