--- a/la matcha.html
+++ b/la matcha.html
@@ -45,7 +45,7 @@
             </li>
           </ul>
 
-          <a class="navbar-brand p-0" href="index.html#main-home">
+          <a class="navbar-brand p-0" href="index.html">
             Singular Spain
           </a>
 
@@ -208,7 +208,7 @@
             </a>
             <ul class="project-menu">
               <li class="pro-1">
-                DURACIÓN DEL VIAJE
+                <span class="user-select-none">DURACIÓN DEL VIAJE</span>
                 <div class="details d-none">
                   <h5 class="Brandon-font-bold">4 días y 3 noches</h5>
                   <p class="Pradell-font">
@@ -218,7 +218,7 @@
                 </div>
               </li>
               <li class="pro-2">
-                LUGARES QUE SE VISITAN
+                <span class="user-select-none">LUGARES QUE SE VISITAN</span>
                 <div class="details d-none">
                   <p class="Pradell-font">
                     Pueblos y villas que cubren la zona: El Toboso, San
@@ -228,7 +228,7 @@
                 </div>
               </li>
               <li class="pro-3">
-                FECHAS y NÚMERO DE VIAJEROS
+                <span class="user-select-none">FECHAS y NÚMERO DE VIAJEROS</span>
                 <div class="details d-none">
                   <div class="details-wrapper Pradell-font">
                     <p>
@@ -276,7 +276,7 @@
                 </div>
               </li>
               <li class="pro-4">
-                ALOJAMIENTO
+                <span class="user-select-none">ALOJAMIENTO</span>
                 <div class="details d-none">
                   <p>
                     Hotel, Hospedería, Parador o Casa de Campo de 4 estrellas La
@@ -286,7 +286,7 @@
                 </div>
               </li>
               <li class="pro-5">
-                PRECIO DEL VIAJE
+                <span class="user-select-none">PRECIO DEL VIAJE</span>
 
                 <div class="details d-none">
                   <div class="details-wrapper Pradell-font">
