--- a/la rutas.html
+++ b/la rutas.html
@@ -48,7 +48,7 @@
             </li>
           </ul>
 
-          <a class="navbar-brand p-0" href="index.html#main-home"> Singular Spain </a>
+          <a class="navbar-brand p-0" href="index.html"> Singular Spain </a>
 
           <div class="navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
