--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </li>
           </ul>
 
-          <a class="navbar-brand p-0" href="index.html#main-home">
+          <a class="navbar-brand p-0" href="index.html">
             Singular Spain
           </a>
 
