--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="main-wrapper">
       <header id="main-header" data-aos="fade" data-aos-delay="300">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
           <ul class="social-menu d-flex list-unstyled my-0">
             <li>
               <a href="#">
@@ -44,11 +44,13 @@
             </li>
           </ul>
 
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <a class="navbar-brand p-0" href="index.html">
             Singular Spain
           </a>
-
-          <div class="navbar-collapse" id="navbarSupportedContent">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item" id="hola">
                 <a class="nav-link" href="index.html#main-hola">Hola</a>
@@ -95,13 +97,19 @@
               <li class="nav-item" id="Cuaderno">
                 <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
               </li>
+              <li class="nav-item d-lg-none"> 
+                  <a class="lang-trigger"> ENG</a> , 
+                  <a class="lang-trigger"> FRA</a> 
+              </li>
             </ul>
           </div>
           <div class="search-blk">
-            <input type="text" placeholder="Buscar" />
-            <button class="search-icon" type="button"></button>
+            <button class="search-mobile d-lg-none" type="button"></button>
+            <input type="text" placeholder="Buscar" class="d-lg-block d-none" />
+            <button class="search-icon d-lg-block d-none" type="button"></button>
           </div>
-          <div class="lang-blk">
+         
+          <div class="lang-blk d-lg-block d-none">
             <a class="lang-trigger current-lang"> ESP</a>
             <a class="lang-trigger"> ENG</a>
             <a class="lang-trigger"> FRA</a>
@@ -119,10 +127,10 @@
             data-aos="fade"
           />
           <div class="section-overlay">
-            <div class="text-overlay" data-aos="fade" data-aos-delay="450">
+            <div class="text-overlay" data-aos="fade" data-aos-delay="1200">
               Un viaje hacia la singularidad.
             </div>
-            <div class="arrow-fixed" data-aos="fade" data-aos-delay="600">
+            <div class="arrow-fixed" data-aos="fade" data-aos-delay="2000">
               <a href="#main-hola">
                 <img
                   src="assets/images/arrow-white.png"
@@ -137,7 +145,7 @@
                 href="#"
                 class="cta-1 d-block"
                 data-aos="fade"
-                data-aos-delay="800"
+                data-aos-delay="3000"
               >
                 <span>UBEDA en DICIEMBRE</span>
                 <span>Últimas plazas disponibles</span>
@@ -146,7 +154,7 @@
                 href="#"
                 class="cta-2 d-block"
                 data-aos="fade"
-                data-aos-delay="800"
+                data-aos-delay="3000"
               >
                 <span>Sur de Gredos</span>
                 <span>Nuevas fechas</span>
@@ -155,7 +163,7 @@
                 href="#"
                 class="cta-3 d-block"
                 data-aos="fade"
-                data-aos-delay="800"
+                data-aos-delay="3000"
               >
                 <span>Este es otro</span>
                 <span>CALL to ACTION</span>
@@ -181,7 +189,7 @@
 
           <div class="section-overlay">
             <div class="text-overlay">
-              <div class="img-wrap">
+              <div class="fleuron-wrap">
                 <img
                   src="assets/images/black-leaf.png"
                   class="lazyload icon-leaf"
