--- a/la rutas.html
+++ b/la rutas.html
@@ -14,7 +14,7 @@
   <body>
     <div class="main-wrapper">
       <header id="main-header" data-aos="fade" data-aos-delay="300">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg navbar-dark">
           <ul class="social-menu d-flex list-unstyled my-0">
             <li>
               <a href="#">
@@ -48,9 +48,13 @@
             </li>
           </ul>
 
-          <a class="navbar-brand p-0" href="index.html"> Singular Spain </a>
-
-          <div class="navbar-collapse" id="navbarSupportedContent">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand p-0" href="index.html">
+            Singular Spain
+          </a>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
               <li class="nav-item" id="hola">
                 <a class="nav-link" href="index.html#main-hola">Hola</a>
@@ -66,7 +70,9 @@
                   <li class="nav-item">
                     <a href="la rutas.html">Las Rutas</a>
                     <ul class="sub-sections">
-                      <li class="nav-item"><a href="la matcha.html">LA MANCHA</a></li>
+                      <li class="nav-item">
+                        <a href="la matcha.html">LA MANCHA</a>
+                      </li>
                       <li class="nav-item"><a href="#">SORIA</a></li>
                       <li class="nav-item"><a href="#">ALPUJARRAS</a></li>
                       <li class="nav-item"><a href="#">ÁVILA y SEGOVIA</a></li>
@@ -95,13 +101,19 @@
               <li class="nav-item" id="Cuaderno">
                 <a class="nav-link last-child" href="#">Cuaderno de Campo</a>
               </li>
+              <li class="nav-item d-lg-none"> 
+                  <a class="lang-trigger"> ENG</a> , 
+                  <a class="lang-trigger"> FRA</a> 
+              </li>
             </ul>
           </div>
           <div class="search-blk">
-            <input type="text" placeholder="Buscar" />
-            <button class="search-icon" type="button"></button>
+            <button class="search-mobile d-lg-none" type="button"></button>
+            <input type="text" placeholder="Buscar" class="d-lg-block d-none" />
+            <button class="search-icon d-lg-block d-none" type="button"></button>
           </div>
-          <div class="lang-blk">
+         
+          <div class="lang-blk d-lg-block d-none">
             <a class="lang-trigger current-lang"> ESP</a>
             <a class="lang-trigger"> ENG</a>
             <a class="lang-trigger"> FRA</a>
@@ -120,6 +132,13 @@
             />
           </section>
           <section class="col-menu">
+            <div class="fleuron-wrap d-lg-none">
+              <img
+                src="assets/images/black-leaf.png"
+                class="lazyload icon-leaf"
+                alt=""
+              />
+            </div>
             <h3 class="title">Las Rutas</h3>
             <ul class="rutas-menu">
               <li><a href="#">Sierra Norte de Madrid</a></li>
@@ -132,7 +151,7 @@
           <section class="col-text">
             <div class="section-overlay">
               <div class="text-overlay">
-                <div class="img-wrap">
+                <div class="fleuron-wrap  d-lg-block d-none">
                   <img
                     src="assets/images/black-leaf.png"
                     class="lazyload icon-leaf"
@@ -181,7 +200,7 @@
                       <span class="read-more">+ Leer más…</span>
                       <span class="read-less d-none">+ Leer menos…</span>
                     </button>
-                    <a href="contacta.html" class="link-to">+ Me interesa</a>
+                    <a href="contacta.html" class="link-to">+ Contacta</a>
                   </div>
                 </div>
               </div>
